k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: znaphub-ingress
  namespace: znaphub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.staging.znaphub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: znaphub-api
                port:
                  number: 8080
    - host: auth.staging.znaphub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: znaphub-keycloak
                port:
                  number: 8080
    - host: db.staging.znaphub.com # TODO: change this
      http: 
        paths: 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: znaphub-db
                port:
                  number: 5432
